_sass/_base.scss
/**
 * Reset some basic elements
 */
body, h1, h2, h3, h4, h5, h6,
p, blockquote, pre, hr,
dl, dd, ol, ul, figure {
	margin: 0;
	padding: 0;
}

/**
 * Basic styling
 */
body {
	font-family: $base-font-family;
	font-size: $base-font-size;
	line-height: $base-line-height;
	text-rendering: optimizelegibility;
	font-weight: 400;
	color: $text-color;
	background-color: $background-color;
	-webkit-text-size-adjust: 100%;
}

/**
 * Set `margin-bottom` to maintain vertical rhythm
 */
h1, h2, h3, h4, h5, h6,
p, blockquote, pre,
ul, ol, dl, figure,
%vertical-rhythm {
	margin-bottom: $spacing-unit / 2;
}

/**
 * Images
 */
img {
	max-width: 100%;
	vertical-align: middle;
}

/**
 * Figures
 */
figure > img {
	display: block;
}

figcaption {
	font-size: $small-font-size;
}

/**
 * Lists
 */
ul, ol {
	margin-left: $spacing-unit;
}

li {
	> ul,
	> ol {
		 margin-bottom: 0;
	}
}

/**
 * Headings
 */
h1, h2, h3, h4, h5, h6 {
	font-weight: 600;
}

/**
 * Links
 */
a {
	color: $brand-color;
	text-decoration: none;
	&:visited {
		color: $brand-color-dark;
	}
	&:hover {
		color: $text-color;
		text-decoration: underline;
	}
}

/**
 * Blockquotes
 */
blockquote {
	color: $grey-color;
	border-left: 4px solid $grey-color-light;
	padding-left: $spacing-unit / 2;
	font-size: 18px;
	letter-spacing: -1px;
	font-style: italic;

	> :last-child {
		margin-bottom: 0;
	}
}

/**
 * Code formatting
 */
pre {
	overflow-x: auto;
	> code:not(.mermaid) {
		border: 0;
		padding: 1px 5px;
		border-radius: 3px;
		font-size: 15px;
		@media (prefers-color-scheme: dark) {
			border: 1px solid $grey-color;
		}
	}
	> code.mermaid {
		border: 0;
		padding: 1px 5px;
		border-radius: 3px;
		font-size: 15px;
		svg {
			background: $grey-color;
		}
	}
}

/**
 * Wrapper
 */
.wrapper {
	max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
	max-width:		 calc(#{$content-width} - (#{$spacing-unit} * 2));
	margin-right: auto;
	margin-left: auto;
	padding-right: $spacing-unit;
	padding-left: $spacing-unit;
	@extend %clearfix;

	@include media-query($on-laptop) {
		max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
		max-width:		 calc(#{$content-width} - (#{$spacing-unit}));
		padding-right: $spacing-unit / 2;
		padding-left: $spacing-unit / 2;
	}
}

/**
 * Clearfix
 */
%clearfix {
	&:after {
		content: "";
		display: table;
		clear: both;
	}
}

/**
 * Icons
 */
.icon {
	> svg {
		display: inline-block;
		width: 16px;
		height: 16px;
		vertical-align: middle;
		path {
			fill: $grey-color;
		}
	}
}

/**
 * Table
 **/
table {
	border: 1px solid #e8e8e8;
	width: 100%;
	border-spacing: 0;
	border-collapse: collapse;
	th, td {
		padding: 6px 13px;
		border: 1px solid #30363d63;
	}
	p{
		margin: 0;
	}
}

